<resources>
    <string name="app_name">Reco visages</string>

	<!-- String for TextView -->
    <string name="App_Title">Reconnaissance de visages</string>
	<string name="App_Description">Prenez une photo puis envoyez-la au serveur pour voir si vous êtes déjà dans la base de données !
	Les chaînes de caractères ne doivent pas contenir de caractères spéciaux (sauf / et _).</string>
    <string name="action_settings">Settings</string>
	<string name="serverTimeOutHttpConnection">Connection Timed Out !</string>
	
	<!-- Strings for buttons -->
	<string name="buttonText_TakePicture">Prendre une nouvelle photo</string>
	<string name="buttonText_LogInTest">Test connexion</string>
	<string name="buttonText_SendPicture">Envoyer une photo</string>
	
	<!-- Strings for radioButtons -->
	<string name="radioButton_AddPicture">Ajouter un visage</string>
	<string name="radioButton_FaceRecognition">Reconnaître un visage</string>

	<!-- Strings for hints -->
	<string name="hint_Address">Adresse du serveur :</string>
	<string name="hint_Last_Name">Nom</string>
	<string name="hint_First_Name">Prenom</string>

	<!-- Strings for Toast popups -->
	<string name="toast_TakePhoto">Vous allez prendre une photo !</string>
	<string name="toast_Error_In_IP">adresse IP</string>
	<string name="toast_Error_In_FileName">nom fichier PHP</string>
	<string name="toast_Upload_File">Envoi de la photo</string>
	<string name="toast_No_Picture">Aucune photo à envoyer.</string>
	<string name="toast_Invalid_Name">nom-prénom</string>
	<string name="toast_Empty_Field">Un champ a été laissé vide</string>

	<!-- Strings for Server address -->
	<string name="server_Byte_1">192</string>
	<string name="server_Byte_2">168</string>
	<string name="server_Byte_3">119</string>
	<string name="server_Byte_4">212</string>
	<string name="server_Prefix">http://</string>
	<string name="server_Suffix">.php</string>
	<string name="server_php_File_Name">server2</string>

	<!-- Strings for Dialog box -->
	<string name="dialog_Send_Picture">Envoi de l\'image...</string>
	<string name="dialog_Ask_Before_Send">Etes-vous sûr d\'envoyer cette image au serveur ?</string>
	<string name="dialog_Yes">Oui</string>
	<string name="dialog_Yes_Clicked">Vous avez cliqué sur Oui</string>
	<string name="dialog_No">Non</string>
	<string name="dialog_No_Clicked">Vous avez cliqué sur Non</string>

	
</resources>
