<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
	tools:context=".MainActivity"
    android:id="@+id/layout_Main_Scroll">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_Main">
        <TextView
            android:text="@string/App_Title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_Title"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/size_TextView_Title"
            android:textStyle="bold|italic"/>

        <TextView
            android:text="@string/App_Description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_Description"
            android:padding="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/size_TextView_Body"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonText_TakePicture"
            android:id="@+id/button_TakePicture"
            android:padding="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/size_TextView_Button"/>

        <ImageView
            android:layout_width="@dimen/size_width_ImageView"
            android:layout_height="@dimen/size_height_ImageView"
            android:id="@+id/imageView_Picture"
            android:background="#e1e1e1"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_gravity="center"
            android:clickable="true"
            android:layout_margin="@dimen/activity_horizontal_margin" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_Address">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText_Address"
                android:hint="@string/hint_Address"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/size_TextView_Body"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_LogInTest"
                android:text="@string/buttonText_LogInTest"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/size_TextView_Button"
                android:textColor="#010001" />
        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_SendPicture"
            android:text="@string/buttonText_SendPicture"
            android:padding="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/size_TextView_Button"/>
    </LinearLayout>
</ScrollView>
